--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "game_web",
   "version": "0.1.0",
-  "homepage": "https://hoangminhtuan1399.github.io/Net-Web-Game",
-  "private": true,
+  "homepage": ".",
+  "private": "false",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
